--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <script>
         // Initialize Backendless
-        Backendless.initApp("YOUR-APP-ID", "YOUR-API-KEY");
+        Backendless.initApp("99C55127-A5D4-4E44-A9AF-B108FD00FD96", "4BBD9886-D137-4FB0-A972-7DB9B7F6D72E");
 
         // Function to fetch and display editais
         function fetchEditais() {
