--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -5,7 +6,7 @@
     <title>GPS - Gerenciamento de Processo Seletivo</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/backendless/6.0.0/backendless.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/backendless/6.0.0/backendless.min.js" defer></script>
 </head>
 <body class="bg-gray-100">
     <div class="flex">
@@ -21,129 +22,57 @@
         </div>
         <!-- Main Content -->
         <div class="w-3/4 p-4">
-            <div class="flex justify-between items-center mb-4">
-                <div>
-                    <span class="text-gray-600">Você está em:</span> <span class="font-bold">Editais</span>
-                </div>
-                <div>
-                    <label for="language" class="text-gray-600">Idioma</label>
-                    <select id="language" class="border border-gray-300 rounded p-1">
-                        <option>Português</option>
-                        <option>English</option>
-                    </select>
-                </div>
-            </div>
             <h2 class="text-2xl font-bold mb-4">Editais</h2>
-            <div class="bg-white p-4 rounded shadow mb-4">
-                <h3 class="font-bold mb-2">Filtros de pesquisa</h3>
-                <div class="grid grid-cols-1 gap-4">
-                    <div>
-                        <label for="title" class="block text-gray-700">Título:</label>
-                        <input type="text" id="title" class="border border-gray-300 rounded w-full p-2">
-                    </div>
-                    <div>
-                        <label for="campus" class="block text-gray-700">Campus:</label>
-                        <select id="campus" class="border border-gray-300 rounded w-full p-2">
-                            <option>Nenhum selecionado</option>
-                        </select>
-                    </div>
-                    <div>
-                        <label for="status" class="block text-gray-700">Situação:</label>
-                        <select id="status" class="border border-gray-300 rounded w-full p-2">
-                            <option>Nenhum selecionado</option>
-                        </select>
-                    </div>
-                    <div>
-                        <label for="category" class="block text-gray-700">Categoria:</label>
-                        <select id="category" class="border border-gray-300 rounded w-full p-2">
-                            <option>Nenhum selecionado</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="flex justify-end mt-4">
-                    <button class="bg-gray-200 text-gray-700 px-4 py-2 rounded mr-2">Atualizar filtragem</button>
-                    <button class="bg-gray-200 text-gray-700 px-4 py-2 rounded">Limpar e atualizar</button>
-                </div>
-            </div>
             <div class="bg-white p-4 rounded shadow">
                 <table class="w-full table-auto">
                     <thead>
                         <tr class="bg-gray-200">
                             <th class="px-4 py-2 text-left">Título</th>
-                            <th class="px-4 py-2 text-left">Data de início das inscrições</th>
-                            <th class="px-4 py-2 text-left">Data de término das inscrições</th>
+                            <th class="px-4 py-2 text-left">Data de Início</th>
+                            <th class="px-4 py-2 text-left">Data de Término</th>
                             <th class="px-4 py-2 text-left">Situação</th>
                         </tr>
                     </thead>
                     <tbody id="editaisTableBody">
-                        <!-- Rows will be inserted here by JavaScript -->
+                        <!-- Dados carregados dinamicamente -->
                     </tbody>
                 </table>
-                <div class="flex justify-between items-center mt-4">
-                    <div>
-                        <label for="itemsPerPage" class="text-gray-600">Itens por página</label>
-                        <select id="itemsPerPage" class="border border-gray-300 rounded p-1">
-                            <option>25</option>
-                            <option>50</option>
-                            <option>100</option>
-                        </select>
-                    </div>
-                    <button class="bg-gray-200 text-gray-700 px-4 py-2 rounded">Atualizar</button>
-                </div>
             </div>
         </div>
     </div>
 
     <script>
-        // Initialize Backendless
-        Backendless.initApp("99C55127-A5D4-4E44-A9AF-B108FD00FD96", "4BBD9886-D137-4FB0-A972-7DB9B7F6D72E");
+        document.addEventListener("DOMContentLoaded", function() {
+            if (typeof Backendless !== "undefined") {
+                Backendless.initApp("99C55127-A5D4-4E44-A9AF-B108FD00FD96", "4BBD9886-D137-4FB0-A972-7DB9B7F6D72E");
+                fetchEditais();
+            } else {
+                console.error("Erro: Backendless não carregado corretamente.");
+            }
+        });
 
-        // Function to fetch and display editais
+        // Função para buscar e exibir editais
         function fetchEditais() {
             Backendless.Data.of("Editais").find()
-                .then(function(editais) {
+                .then(editais => {
                     const tableBody = document.getElementById("editaisTableBody");
-                    tableBody.innerHTML = ""; // Clear existing rows
+                    tableBody.innerHTML = ""; // Limpa as linhas existentes
 
-                    editais.forEach(function(edital) {
+                    editais.forEach(edital => {
                         const row = document.createElement("tr");
                         row.classList.add("border-t");
 
-                        const titleCell = document.createElement("td");
-                        titleCell.classList.add("px-4", "py-2");
-                        const titleLink = document.createElement("a");
-                        titleLink.href = "#";
-                        titleLink.classList.add("text-blue-600");
-                        titleLink.textContent = edital.titulo;
-                        titleCell.appendChild(titleLink);
-
-                        const startDateCell = document.createElement("td");
-                        startDateCell.classList.add("px-4", "py-2");
-                        startDateCell.textContent = edital.dataInicio;
-
-                        const endDateCell = document.createElement("td");
-                        endDateCell.classList.add("px-4", "py-2");
-                        endDateCell.textContent = edital.dataTermino;
-
-                        const statusCell = document.createElement("td");
-                        statusCell.classList.add("px-4", "py-2");
-                        statusCell.textContent = edital.situacao;
-
-                        row.appendChild(titleCell);
-                        row.appendChild(startDateCell);
-                        row.appendChild(endDateCell);
-                        row.appendChild(statusCell);
-
+                        row.innerHTML = `
+                            <td class="px-4 py-2 text-blue-600">${edital.titulo}</td>
+                            <td class="px-4 py-2">${edital.dataInicio}</td>
+                            <td class="px-4 py-2">${edital.dataTermino}</td>
+                            <td class="px-4 py-2">${edital.situacao}</td>
+                        `;
                         tableBody.appendChild(row);
                     });
                 })
-                .catch(function(error) {
-                    console.error("Error fetching editais:", error);
-                });
+                .catch(error => console.error("Erro ao buscar editais:", error));
         }
-
-        // Fetch editais on page load
-        document.addEventListener("DOMContentLoaded", fetchEditais);
     </script>
 </body>
 </html>
